[build-system]
build-backend = "hatchling.build"
requires = [
    "hatch-vcs",
    "hatchling",
]

[project]
name = "nhl-scrabble"
description = "NHL Roster Scrabble Score Analyzer - Calculate Scrabble scores for NHL player names"
readme = "README.md"
keywords = [
    "analytics",
    "hockey",
    "nhl",
    "scrabble",
    "sports",
]
license.text = "MIT"
authors = [
    { name = "Brandon Perkins", email = "bdperkin@gmail.com" },
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = [
    "version",
]
dependencies = [
    "certifi",
    "click",
    "colorlog>=6.10.1",
    "dicttoxml>=1.7.16",
    "fastapi",
    "jinja2>=3.1.6",
    "platformdirs>=4.0.0",
    "prompt-toolkit>=3.0.52",
    "pydantic",
    "pydantic-settings>=2.7.3",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "requests-cache>=1.3.1",
    "rich>=15.0.0",
    "starlette>=1.0.0",
    "unidecode>=1.3.0",
    "uvicorn[standard]>=0.27.0",
]
optional-dependencies.branding = [
    "cairosvg>=2.9.0",
    "pillow>=12.2.0",
]
optional-dependencies.build = [
    "build",
]
optional-dependencies.dev = [
    "check-jsonschema>=0.37.1",
    "nhl-scrabble[build,docs,export,lint,publish,security,test,tox,type,watch]",
    "pre-commit",
    "tomli>=2.4.1",
    "tomli-w>=1.2.0",
]
optional-dependencies.docs = [
    "blacken-docs>=1.20.0",
    "myst-parser>=5.0.0",
    "pytest-sphinx>=0.7.1",
    "sphinx>=9.1.0",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-autodoc-typehints>=3.10.2",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.7.0",
    "sphinx-rtd-theme>=3.1.0",
    "sphinx-sitemap>=2.9.0",
    "sphinxcontrib-programoutput>=0.19",
    "sphinxcontrib-spelling>=8.0.2",
    "sphinxext-opengraph>=0.13.0",
]
optional-dependencies.docs-gen = [
    "pdoc>=16.0.0",
]
optional-dependencies.export = [
    "openpyxl>=3.1.5",
]
optional-dependencies.lint = [
    "refurb>=2.3.1",
    "ruff",
]
optional-dependencies.publish = [
    "twine>=6.2.0",
]
optional-dependencies.security = [
    "bandit[toml]>=1.7.5",
    "pip-audit>=2.10.0",
    "pip-licenses>=5.5.5",
    "safety>=3.7.0",
]
optional-dependencies.test = [
    "beautifulsoup4>=4.14.3",
    "diff-cover>=10.2.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-benchmark>=5.2.3",
    "pytest-clarity>=1.0.1",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-randomly>=4.1.0",
    "pytest-rerunfailures>=16.1",
    "pytest-sugar>=1.1.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
]
optional-dependencies.tox = [
    "tox",
    "tox-uv>=1.35.1",
]
optional-dependencies.type = [
    "mypy",
    "ty",
    "types-pyyaml>=6.0.12.20260408",
    "types-requests>=2.33.0.20260408",
]
optional-dependencies.watch = [
    "pytest-watch",
]
urls.Homepage = "https://github.com/bdperkin/nhl-scrabble"
urls.Issues = "https://github.com/bdperkin/nhl-scrabble/issues"
urls.Repository = "https://github.com/bdperkin/nhl-scrabble"
scripts.nhl-scrabble = "nhl_scrabble.cli:cli"

[tool.hatch]
build.hooks.vcs.version-file = "src/nhl_scrabble/_version.py"
build.targets.wheel.packages = [
    "src/nhl_scrabble",
]
version.source = "vcs"

[tool.black]
line-length = 100
target-version = [
    "py312",
]
skip-string-normalization = false
skip-magic-trailing-comma = false
extend-exclude = """\
    /(\n  # directories\n  \\.eggs\n  | \\.git\n  | \\.tox\n  | \\.venv\n  | venv\n  | build\n  | \
    dist\n  | \\.egg-info\n  | __pycache__\n  | \\.pytest_cache\n  | \\.mypy_cache\n  | \
    \\.ruff_cache\n  # auto-generated files\n  | src/nhl_scrabble/_version\\.py\n)/\n\
    """

[tool.ruff]
target-version = "py312"
line-length = 100
src = [
    "src",
    "tests",
]
exclude = [
    "src/nhl_scrabble/_version.py",
]
format.indent-style = "space"
format.quote-style = "double"
format.docstring-code-format = false
lint.select = [
    "ALL",
]
lint.ignore = [
    "COM812",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",
    "D213",
    "D413",
    "E501",
    "EM101",
    "EM102",
    "FBT001",
    "FBT002",
    "FIX002",
    "G004",
    "ISC001",
    "PERF102",
    "PERF203",
    "PLC0206",
    "PLR2004",
    "PTH123",
    "PYI034",
    "PYI036",
    "RET504",
    "TC001",
    "TD002",
    "TD003",
    "TRY003",
    "TRY300",
    "TRY400",
]
lint.per-file-ignores."__init__.py" = [
    "D104",
    "F401",
]
lint.per-file-ignores."scripts/generate_branding.py" = [
    "PLR0915",
    "T201",
]
lint.per-file-ignores."scripts/update_dependencies.py" = [
    "C901",
    "PLR0911",
    "PLR0912",
    "PLR0915",
    "S607",
    "T201",
]
lint.per-file-ignores."src/nhl_scrabble/__main__.py" = [
    "T201",
]
lint.per-file-ignores."src/nhl_scrabble/api/nhl_client.py" = [
    "ANN401",  # API responses return dict[str, Any] for unstructured JSON
    "C901",
    "PLR0912",
]
lint.per-file-ignores."src/nhl_scrabble/api_server/routes/*.py" = [
    "C901",
    "ERA001",
    "FAST002",
    "TRY301",
]
lint.per-file-ignores."src/nhl_scrabble/cli.py" = [
    "C901",
    "PLC0415",
    "T201",
    "TC003",
]
lint.per-file-ignores."src/nhl_scrabble/exporters/excel_exporter.py" = [
    "ANN401", # Excel export methods accept dict[str, Any] for flexibility
]
lint.per-file-ignores."src/nhl_scrabble/formatters/*.py" = [
    "ANN401", # Formatters accept dict[str, Any] for unstructured data
]
lint.per-file-ignores."src/nhl_scrabble/formatters/__init__.py" = [
    "ANN401", # Factory pattern requires flexible kwargs
]
lint.per-file-ignores."src/nhl_scrabble/formatters/factory.py" = [
    "ANN401", # Factory pattern requires flexible kwargs
]
lint.per-file-ignores."src/nhl_scrabble/logging_config.py" = [
    "PERF403",
    "PLC0415",
]
lint.per-file-ignores."src/nhl_scrabble/models/*.py" = [
    "ANN401", # to_dict() methods return dict[str, Any] for JSON serialization
]
lint.per-file-ignores."src/nhl_scrabble/reports/base.py" = [
    "ANN401", # Abstract method intentionally uses Any for flexibility
]
lint.per-file-ignores."src/nhl_scrabble/reports/comparison.py" = [
    "ANN401", # JSON generation methods return dict[str, Any]
]
lint.per-file-ignores."src/nhl_scrabble/security/circuit_breaker.py" = [
    "ANN401", # Generic wrapper uses *args: Any, **kwargs: Any pattern
]
lint.per-file-ignores."src/nhl_scrabble/utils/retry.py" = [
    "ANN401", # Decorator wrappers use *args: Any, **kwargs: Any pattern
]
lint.per-file-ignores."src/nhl_scrabble/validators.py" = [
    "ANN401", # API response validation uses dict[str, Any]
]
lint.per-file-ignores."src/nhl_scrabble/web/app.py" = [
    "ANN401", # FastAPI/Pydantic response models use dict[str, Any]
]
lint.per-file-ignores."tests/**/*.py" = [
    "ANN",
    "ARG",
    "PLC0415",
    "PLR2004",
    "S101",
    "SLF001",
]
lint.per-file-ignores."tests/unit/test_nhl_client.py" = [
    "SLF001",
]
lint.isort.known-first-party = [
    "nhl_scrabble",
]
lint.mccabe.max-complexity = 10
lint.pylint.max-args = 7
lint.pylint.max-branches = 12
lint.pylint.max-returns = 6
lint.pylint.max-statements = 50

[tool.isort]
profile = "black"
line_length = 100
known_first_party = [
    "nhl_scrabble",
]
src_paths = [
    "src",
    "tests",
]
skip_gitignore = true
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",  # codespell:ignore THIRDPARTY
    "FIRSTPARTY",
    "LOCALFOLDER",
]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [
    ".eggs/*",
    ".git/*",
    ".tox/*",
    ".venv/*",
    "venv/*",
    "build/*",
    "dist/*",
    "*.egg-info/*",
    "__pycache__/*",
    "src/nhl_scrabble/_version.py",
]

[tool.flake8]
max-line-length = 100
extend-ignore = [
    "E501",
    "W503",
    "E203",
]
per-file-ignores = [
    "__init__.py:F401,F403",
    "tests/*:S101",
    "src/nhl_scrabble/api/nhl_client.py:C901",
    "src/nhl_scrabble/api_server/routes/players.py:C901",
    "src/nhl_scrabble/validators.py:C901",
    "src/nhl_scrabble/cli.py:TC003,C901",
    "src/nhl_scrabble/config_validators.py:C901",
    "scripts/update_dependencies.py:C901",
]
max-complexity = 10
exclude = [
    ".git",
    ".tox",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "src/nhl_scrabble/_version.py",
]

[tool.codespell]
check-filenames = true
check-hidden = true
skip = """\
    *.lock,*.json,*.min.js,*.svg,htmlcov/*,.git/*,.tox/*,.venv/*,*.egg-info/*,build/*,dist/*,.pytes\
    t_cache/*,.mypy_cache/*,.ruff_cache/*,docs/reference/api,docs/_build/*\
    """
ignore-words = ".codespell-ignore-words.txt"
count = true
quiet-level = 0

[tool.docformatter]
wrap_length = 100
wrap_summaries = 100
wrap_descriptions = 100
black = false
style = "pep257"
make_summary_multi_line = false
close_quotes_on_newline = false
pre_summary_newline = false
exclude = [
    ".git",
    ".tox",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
    "src/nhl_scrabble/_version.py",
]

[tool.check-wheel-contents]
toplevel = [
    "nhl_scrabble",
]
ignore = [
    "W002",
]

[tool.deptry]
exclude = [
    "\\.git",
    "\\.tox",
    "\\.venv",
    "venv",
    "build",
    "dist",
    ".*\\.egg-info",
    "__pycache__",
    "tests",
    "qa",
    "scripts",
]
ignore = [  ]
pep621_dev_dependency_groups = [
    "dev",
    "test",
    "lint",
    "type",
    "security",
    "docs",
    "watch",
    "build",
    "publish",
    "tox",
    "docs-gen",
    "branding",
]
known_first_party = [ "nhl_scrabble" ]
package_module_name_map.bandit = "bandit"
package_module_name_map.beautifulsoup4 = "beautifulsoup4"
package_module_name_map.blacken-docs = "blacken_docs"
package_module_name_map.build = "build"
package_module_name_map.cairosvg = "cairosvg"
package_module_name_map.certifi = "certifi"
package_module_name_map.check-jsonschema = "check_jsonschema"
package_module_name_map.colorlog = "colorlog"
package_module_name_map.dicttoxml = "dicttoxml"
package_module_name_map.diff-cover = "diff_cover"
package_module_name_map.fastapi = "fastapi"
package_module_name_map.httpx = "httpx"
package_module_name_map.jinja2 = "jinja2"
package_module_name_map.mypy = "mypy"
package_module_name_map.myst-parser = "myst_parser"
package_module_name_map.nhl-scrabble = "nhl_scrabble"
package_module_name_map.openpyxl = "openpyxl"
package_module_name_map.pdoc = "pdoc"
package_module_name_map.Pillow = "pillow"
package_module_name_map.pip-audit = "pip_audit"
package_module_name_map.pip-licenses = "pip_licenses"
package_module_name_map.pre-commit = "pre_commit"
package_module_name_map.prompt-toolkit = "prompt_toolkit"
package_module_name_map.pydantic = "pydantic"
package_module_name_map.pytest-benchmark = "pytest_benchmark"
package_module_name_map.pytest-clarity = "pytest_clarity"
package_module_name_map.pytest-cov = "pytest_cov"
package_module_name_map.pytest-mock = "pytest_mock"
package_module_name_map.pytest = "pytest"
package_module_name_map.pytest-randomly = "pytest_randomly"
package_module_name_map.pytest-rerunfailures = "pytest_rerunfailures"
package_module_name_map.pytest-sphinx = "pytest_sphinx"
package_module_name_map.pytest-sugar = "pytest_sugar"
package_module_name_map.pytest-timeout = "pytest_timeout"
package_module_name_map.pytest-watch = "pytest_watch"
package_module_name_map.pytest-xdist = "pytest_xdist"
package_module_name_map.python-dotenv = "dotenv"
package_module_name_map.pyyaml = "yaml"
package_module_name_map.refurb = "refurb"
package_module_name_map.requests-cache = "requests_cache"
package_module_name_map.requests = "requests"
package_module_name_map.rich = "rich"
package_module_name_map.ruff = "ruff"
package_module_name_map.safety = "safety"
package_module_name_map.sphinx-autobuild = "sphinx_autobuild"
package_module_name_map.sphinx-autodoc-typehints = "sphinx_autodoc_typehints"
package_module_name_map.sphinxcontrib-programoutput = "sphinxcontrib_programoutput"
package_module_name_map.sphinxcontrib-spelling = "sphinxcontrib_spelling"
package_module_name_map.sphinx-copybutton = "sphinx_copybutton"
package_module_name_map.sphinx-design = "sphinx_design"
package_module_name_map.sphinxext-opengraph = "sphinxext_opengraph"
package_module_name_map.sphinx-rtd-theme = "sphinx_rtd_theme"
package_module_name_map.sphinx-sitemap = "sphinx_sitemap"
package_module_name_map.sphinx = "sphinx"
package_module_name_map.starlette = "starlette"
package_module_name_map.tomli = "tomli"
package_module_name_map.tomli-w = "tomli_w"
package_module_name_map.tox = "tox"
package_module_name_map.tox-uv = "tox_uv"
package_module_name_map.twine = "twine"
package_module_name_map.types-PyYAML = "types_pyyaml"
package_module_name_map.types-requests = "types_requests"
package_module_name_map.ty = "ty"
package_module_name_map.uvicorn = "uvicorn"
per_rule_ignores = {}

[tool.pyproject-fmt]
# Column width for line wrapping
column_width = 100
# Indentation (spaces)
indent = 4
# Keep full version specifiers (don't simplify)
# Example: keep ">=1.0.0" instead of simplifying to ">=1.0"
keep_full_version = true

[tool.pytest]
ini_options.testpaths = [
    "tests",
]
ini_options.python_files = [
    "test_*.py",
]
ini_options.python_classes = [
    "Test*",
]
ini_options.python_functions = [
    "test_*",
]
ini_options.timeout = 60
ini_options.timeout_method = "thread"
ini_options.junit_family = "xunit2"
ini_options.junit_logging = "all"
ini_options.addopts = [
    "--strict-markers",
    "--strict-config",
    "-n",
    "auto",
    "--cov=nhl_scrabble",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--timeout=60",
]
ini_options.markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "timeout: Custom timeout for specific tests (e.g., @pytest.mark.timeout(300))",
    "no_parallel: Tests that must run sequentially (e.g., @pytest.mark.no_parallel)",
    "flaky: Flaky test that may fail intermittently (will be retried on failure)",
]

[tool.coverage]
run.branch = true
run.omit = [
    "*/__main__.py",
    "*/tests/*",
]
run.source = [
    "src",
]
report.exclude_lines = [
    "@abstractmethod",
    "def __repr__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
]
report.precision = 2
report.show_missing = true
report.skip_covered = false
html.directory = "htmlcov"

[tool.mypy]
python_version = "3.12"
plugins = [ "pydantic.mypy" ]
exclude = [ "src/nhl_scrabble/_version.py" ]
strict = true
warn_unreachable = true
warn_no_return = true
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = true                 # Warn about explicit Any usage
disallow_any_generics = true
disallow_subclassing_any = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_configs = true
strict_optional = true
strict_equality = true
strict_concatenate = true
show_error_context = true
show_column_numbers = true
show_error_code_links = true
pretty = true
color_output = true
error_summary = true
show_absolute_path = false
namespace_packages = true
explicit_package_bases = false
ignore_missing_imports = true
mypy_path = "src"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "qa.*",
]
# Relax type checking for test files
disallow_untyped_defs = false
disallow_untyped_decorators = false
disallow_any_expr = false
disallow_any_explicit = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "nhl_scrabble.cli",
    "nhl_scrabble.web.*",
    "nhl_scrabble.api_server.*",
]
# Disable strict checks for modules using third-party decorators (Click, FastAPI)
# that don't provide complete type information
disallow_untyped_decorators = false
disallow_subclassing_any = false
disallow_any_explicit = false

[[tool.mypy.overrides]]
module = [
    "update_dependencies",
]
# Script uses conditional imports for compatibility
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = [
    "nhl_scrabble.reports.base",
    "nhl_scrabble.reports.comparison",
    "nhl_scrabble.reports.stats_report",
    "nhl_scrabble.reports.generator",
    "nhl_scrabble.formatters.*",
    "nhl_scrabble.models.*",
    "nhl_scrabble.web.app",
    "nhl_scrabble.validators",
    "nhl_scrabble.api.nhl_client",
    "nhl_scrabble.filters",
    "nhl_scrabble.utils.retry",
    "nhl_scrabble.security.circuit_breaker",
    "nhl_scrabble.exporters.*",
    "nhl_scrabble.rate_limiter",
    "nhl_scrabble.storage.*",
    "nhl_scrabble.scoring.scrabble",
    "nhl_scrabble.config",
    "nhl_scrabble.dashboard",
    "nhl_scrabble.logging_config",
    "nhl_scrabble.processors.team_processor",
    "nhl_scrabble.interactive.shell",
]
# Allow explicit Any for legitimate use cases:
# - Abstract base classes with generic methods
# - JSON serialization/deserialization
# - API response handling
# - Factory patterns
# - Generic wrappers and decorators
# - Pre-existing type inconsistencies
disallow_any_explicit = false

[tool.uv]
python-preference = "managed"
constraint-dependencies = [  ]
override-dependencies = [  ]
sources = {}
index-strategy = "first-index"
keyring-provider = "disabled"
resolution = "highest"
compile-bytecode = true
link-mode = "copy"
managed = true
package = true
cache-keys = [  ]
preview = false

[tool.bandit]
targets = [
    "src",
]
exclude_dirs = [
    "tests",
    ".tox",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
    "src/nhl_scrabble/_version.py",
]
severity = "LOW"
confidence = "LOW"
skips = [
    "B101",
    "B311",
]
exclude_tests = [  ]

[tool.ty]
environment.python-version = "3.12"
rules = {}
src.include = [
    "src/",
    "tests/",
]
terminal.error-on-warning = false

[tool.autoflake]
check = true
in-place = false
remove-all-unused-imports = true
remove-unused-variables = true
remove-duplicate-keys = true
ignore-init-module-imports = true
exclude = [
    ".git",
    ".tox",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
    "__pycache__",
    "src/nhl_scrabble/_version.py",
]

[tool.refurb]
enable_all = true
python_version = "3.12"
ignore = [
    "FURB113", # Multiple append() calls are sometimes more readable than extend()
    "FURB120", # Explicit default arguments can improve code clarity
]

[tool.ssort]
skip = [
    "tests/fixtures/",
    "migrations/",
    "src/nhl_scrabble/_version.py",
]
src_paths = [
    "src/",
    "tests/",
]

[tool.diff_cover]
compare_branch = "origin/main"
fail_under = 80.0
include_paths = [
    "src/",
]
exclude_paths = [
    "tests/",
    "*/__main__.py",
]

[tool.pytest_benchmark]
save = true
save_data = true
compare = "0001"
fail_on_regression = true
regression_threshold = 0.2
storage = ".benchmarks"
columns = [
    "min",
    "max",
    "mean",
    "stddev",
    "median",
    "iqr",
    "outliers",
    "rounds",
    "iterations",
]
histogram = "normal"
warmup = true
warmup_iterations = 5
min_time = 5e-06

[tool.rstcheck]
report_level = "INFO"
ignore_directives = [  ]
ignore_roles = [  ]
ignore_substitutions = [  ]
ignore_languages = [  ]
ignore_messages = ""

[tool.doc8]
max-line-length = 100
extensions = [
    ".rst",
    ".txt",
]
ignore-path = [
    ".git",
    ".tox",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "htmlcov",
]
ignore = [  ]
verbose = false
file-encoding = "utf-8"

[tool.mdformat]
wrap = 100
number = true
end_of_line = "lf"

[tool.interrogate]
fail-under = 100.0
verbose = 2
quiet = false
color = true
ignore-init-method = false
ignore-init-module = false
ignore-magic = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = false
ignore-overloaded-functions = false
ignore-private = false
ignore-semiprivate = false
ignore-property-decorators = false
ignore-setters = false
exclude = [
    ".git",
    ".tox",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
    "__pycache__",
    "tests",
    ".scratch",
    "src/nhl_scrabble/_version.py",
]
ext = [  ]
style = "sphinx"
omit-covered-files = false

[tool.unimport]
exclude = "\\.git|\\.tox|\\.venv|venv|build|dist|.*\\.egg-info|__pycache__|src/nhl_scrabble/_version\\.py"
ignore_init = true
include_star_import = false
gitignore = true

[tool.pydocstyle]
convention = "pep257"
match = ".*\\.py"
match_dir = "[^\\.].*"
match-dir = "(?!_version\\.py$).*"
add-ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D202",
    "D203",
    "D213",
    "D413",
]

[tool.vulture]
exclude = [
    ".git",
    ".tox",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
    "__pycache__",
    "src/nhl_scrabble/_version.py",
]
ignore_decorators = [
    "@*.command",
    "@*.group",
    "@*.option",
    "@*.argument",
    "@pytest.fixture",
    "@pytest.mark.*",
    "@app.route",
    "@app.get",
    "@app.post",
    "@app.put",
    "@app.patch",
    "@app.delete",
    "@*.register",
    "@property",
    "@*.setter",
    "@*.getter",
    "@staticmethod",
    "@classmethod",
    "@abstractmethod",
]
ignore_names = [
    "exc_*",
    "format",
    "NHLApiNotFoundError",
    "track_score_calculation",
    "track_report_generation",
    "track_api_fetching",
    "ReportGenerator",
    "get_report",
    "validate_safe_path",
    "validate_url",
    "validate_float_range",
    "validate_output_format",
    "reset",
    "health",
    "root",
    "favicon",
    "dispatch",
    "templates",
    "get_players",
    "get_standings",
    "get_team",
    "get_teams",
    "test_*",
    "fixture_*",
    "*_fixture",
    "args",
    "kwargs",
    "_*",
]
min_confidence = 60

[tool.pymarkdown]
mode.strict-config = true
plugins.enabled = [
    "md001",
    "md002",
    "md003",
    "md004",
    "md005",
    "md006",
    "md007",
    "md009",
    "md010",
    "md011",
    "md012",
    "md013",
    "md014",
    "md018",
    "md019",
    "md020",
    "md021",
    "md022",
    "md023",
    "md024",
    "md025",
    "md026",
    "md027",
    "md028",
    "md029",
    "md030",
    "md031",
    "md032",
    "md033",
    "md034",
    "md035",
    "md036",
    "md037",
    "md038",
    "md039",
    "md040",
    "md041",
    "md042",
    "md043",
    "md044",
    "md045",
    "md046",
    "md047",
    "md048",
    "md049",
    "md050",
    "md051",
    "md052",
    "md053",
]
plugins.disabled = [  ]
plugins.md010.enabled = false
plugins.md012.enabled = true
plugins.md013.enabled = false
plugins.md022.enabled = false
plugins.md024.enabled = false
plugins.md029.enabled = false
plugins.md031.enabled = false
plugins.md032.enabled = false
plugins.md033.enabled = false
plugins.md034.enabled = false
plugins.md036.enabled = false
plugins.md040.enabled = false
plugins.md041.enabled = false
plugins.md043.enabled = false
