[project]
name = "nhl-scrabble-qa-web"
version = "1.0.0"
description = "Web automation tests for NHL Scrabble"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.58.0",
    "pytest>=9.0.3",
    "pytest-playwright>=0.7.2",
    "pytest-html>=4.2.0",
    "pytest-xdist>=3.8.0",
    "pillow>=12.2.0",
    "axe-playwright>=0.1.0",
    "locust>=2.43.4",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.4.0",
]

[build-system]
requires = [
    "setuptools>=68",
    "wheel",
]
build-backend = "setuptools.build_meta"
