[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=68",
  "wheel",
]

[project]
name = "nhl-scrabble-qa-web"
version = "1.0.0"
description = "Web automation tests for NHL Scrabble"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "axe-playwright>=0.1",
  "locust>=2.43.4",
  "pillow>=12.2",
  "playwright>=1.58",
  "pytest>=9.0.3",
  "pytest-html>=4.2",
  "pytest-playwright>=0.7.2",
  "pytest-xdist>=3.8",
]
optional-dependencies.dev = [
  "pytest-cov>=7.1",
  "pytest-timeout>=2.4",
]
